k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations: 
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - tullochfoundation.com
        - www.tullochfoundation.com
      secretName: tulloch-foundation-com
    rules:
      - host: tullochfoundation.com
        - http:
            paths:
                - path: /?(.*)
                  backend: 
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
      - host: www.tullochfoundation.com
        - http:
            paths:
                - path: /?(.*)
                  backend: 
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
